gccida/c3/fold_binary_op_with_conditional_arg
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_binary_op_with_conditional_arg/src/fold-const.c:5306:44: error: must use 'enum' tag to refer to type 'tree_code'
tree  fold_binary_op_with_conditional_arg( tree_code code, tree type, tree cond, tree arg, int cond_first_p) 
                                           ^
                                           enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_binary_op_with_conditional_arg/src/fold-const.c:5308:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_binary_op_with_conditional_arg/src/fold-const.c:5309:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v8; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_binary_op_with_conditional_arg/src/fold-const.c:5314:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_binary_op_with_conditional_arg/src/fold-const.c:5317:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_binary_op_with_conditional_arg/src/fold-const.c:5322:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_binary_op_with_conditional_arg/src/fold-const.c:5325:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_binary_op_with_conditional_arg/src/fold-const.c:5326:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_binary_op_with_conditional_arg/src/fold-const.c:5327:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_binary_op_with_conditional_arg/src/fold-const.c:5328:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_binary_op_with_conditional_arg/src/fold-const.c:5331:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_binary_op_with_conditional_arg/src/fold-const.c:5334:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v34; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_binary_op_with_conditional_arg/src/fold-const.c:5337:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v37; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_binary_op_with_conditional_arg/src/fold-const.c:5339:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v39; // [rsp+4h] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_binary_op_with_conditional_arg/src/fold-const.c:5354:20: error: expected expression
v13 = ( tree_node *)*( &global_trees + 27); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_binary_op_with_conditional_arg/src/fold-const.c:5354:9: error: use of undeclared identifier 'tree_node'
v13 = ( tree_node *)*( &global_trees + 27); 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_binary_op_with_conditional_arg/src/fold-const.c:5396:20: error: expected expression
v31 = ( tree_node *)v40; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_binary_op_with_conditional_arg/src/fold-const.c:5396:9: error: use of undeclared identifier 'tree_node'
v31 = ( tree_node *)v40; 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_binary_op_with_conditional_arg/src/fold-const.c:5410:20: error: expected expression
v31 = ( tree_node *)v40; 
                   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fold_binary_op_with_conditional_arg/src/obj/fold-const.o] Error 1
